# llm-safety-eval

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  gitignore  pyproject.toml  requirements-dev.txt  test_ws.py
.github/workflows/ci.yml/: .github:workflowCI.yaml
evaluation_results/: eval_results.json
src/ai_eval/: dashboard.py  datasets.py  run_benchmark.py  run_service.py
src/ai_eval/.docker_file/: docker
src/ai_eval/datasets/: datasets.py  extra_datasets.py
src/ai_eval/db/: db_utils.py  results.db
src/ai_eval/evaluators/: bias.py  hallucination.py  toxicity.py
src/ai_eval/future_apps/: test_api.py
src/ai_eval/models/: __init__.py  base.py  factory.py  mlx_model.py  ollama_model.py  openai_model.py
src/ai_eval/retrieval/: __init__.py  embedding_base.py  embedding_retriever.py  knowledge.py  openai_embeddings.py  sentence_transformer_provider.py
src/ai_eval/service/: api.py  auth.py
src/ai_eval/utils/: claims.py  costs.py  logging.py  reporting.py  sentiment.py  statistics.py
tests/: conftest.py  test_api.py  test_bias.py  test_evaluators.py  test_hallucination.py
