```toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-safety-eval"
version = "0.1.0"
description = "Model-agnostic evaluation service for LLM bias, toxicity, and hallucination"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "openai>=1.0",
    "pydantic>=2.0",
    "numpy>=1.20",
    "detoxify>=0.5",
    "vaderSentiment>=3.3",
    "matplotlib>=3.5",
    "pandas>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
test = ["pytest"]
[run pip install -e . after update]